// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SampleFileSizeWarning /> should not render link when [showLink=false] 1`] = `
<Alert
  color="orange"
  level={true}
>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="exclamation-triangle"
  />
  <span>
    <strong>
      The read files in this sample are smaller than expected. 
    </strong>
    <span>
      Check the file sizes
       and ensure they are correct.
    </span>
  </span>
</Alert>
`;

exports[`<SampleFileSizeWarning /> should render 1`] = `
<Alert
  color="orange"
  level={true}
>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="exclamation-triangle"
  />
  <span>
    <strong>
      The read files in this sample are smaller than expected. 
    </strong>
    <span>
      <Link
        to="/samples/foo/files"
      >
        Check the file sizes
      </Link>
       and ensure they are correct.
    </span>
  </span>
</Alert>
`;

exports[`<SampleFileSizeWarning /> should render when [show=false] 1`] = `""`;
